--- a/css/home.css
+++ b/css/home.css
@@ -1,7 +1,7 @@
 
 
 .dumpings {
-    overflow-x: scroll;
+    overflow-x: auto;
     height: 15em;
 }
 .dumping {
@@ -9,7 +9,7 @@
     display: inline-block;
     width:31%;
     border: 1px solid black;
-    overflow:scroll;
+    overflow: auto;
     height: 60%;
 }
 .dumping h3{
